# auth-leptos

./: .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  history.txt  input.css  package-lock.json  package.json  tailwind.config.js
.zed/: settings.json
src/: c.rs  fileserv.rs  lib.rs  main.rs  notification_center.rs
src/components/: app.rs  error_template.rs  mod.rs  signature.rs  test.rs  theme.rs  user.rs
src/components/appbar/: login_button_bar.rs  mod.rs  user_avatar.rs  user_avatar_bar.rs
src/components/auth/: auth_page.rs  mod.rs
src/components/helper/: mod.rs  redirect.rs
src/components/profile/: mod.rs
src/components/test/: mod.rs
src/model/: credential.rs  mod.rs  session.rs  theme.rs  user.rs
src/server/: credentials.rs  mod.rs  surreal.rs
src/server/session/: mod.rs
src/server/session/mock/: mod.rs
src/server/session/surreal/: mod.rs  test.rs
src/server/user/: mock.rs  mod.rs
src/server/user/surreal/: mod.rs  test.rs
